# hypharunner

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  hypharunner-config.cmake
cmake/: CompileOptions.cmake  FindHypha.cmake
deploy/: CMakeLists.txt
deploy/scripts/: postinst
doc/: CMakeLists.txt  Doxyfile.in
docs/api-docs/: CMakeLists.txt  doxyfile.in
etc/: hypharunner
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/hypharunner/: CMakeLists.txt
source/hypharunner/include/hypharunner/: hypharunner.h
source/hypharunner/include/hypharunner/controller/: connection.h  connectionfactory.h  controller.h  handlerserver.h  localconnection.h  networkconnection.h  pointercontroller.h
source/hypharunner/include/hypharunner/network/: communicatehandler.h  infohandler.h  pointerhandler.h  requesthandlerfactory.h  roothandler.h  sendhandler.h  statusmessagehandler.h  tcpserver.h
source/hypharunner/source/: hypharunner.cpp
source/hypharunner/source/controller/: connection.cpp  connectionfactory.cpp  controller.cpp  handlerserver.cpp  localconnection.cpp  networkconnection.cpp  pointercontroller.cpp
source/hypharunner/source/network/: communicatehandler.cpp  infohandler.cpp  pointerhandler.cpp  requesthandlerfactory.cpp  roothandler.cpp  sendhandler.cpp  statusmessagehandler.cpp  tcpserver.cpp
source/tests/: CMakeLists.txt
source/tests/hypharunner-test/: CMakeLists.txt  pointercontroller_test.cpp
src/: CMakeLists.txt  hypharunner.cpp  hypharunner.h
src/controller/: connection.cpp  connection.h  controller.cpp  controller.h  handlerserver.cpp  handlerserver.h  localconnection.cpp  localconnection.h  networkconnection.cpp  networkconnection.h
src/handlers/: CMakeLists.txt
src/handlers/alarm/: CMakeLists.txt  alarm.cpp  alarm.h  alarm.json
src/handlers/blechuhr/: CMakeLists.txt  blechuhr.cpp  blechuhr.h  blechuhr.json
src/handlers/dooropener/: CMakeLists.txt  dooropener.cpp  dooropener.h  dooropener.json
src/handlers/serverstatus/: CMakeLists.txt  serverstatus.cpp  serverstatus.h  serverstatus.json
src/handlers/videocontrol/: CMakeLists.txt  videocontrol.cpp  videocontrol.h  videocontrol.json
src/network/: communicatehandler.cpp  communicatehandler.h  infohandler.cpp  infohandler.h  requesthandlerfactory.cpp  requesthandlerfactory.h  roothandler.cpp  roothandler.h  sendhandler.cpp  sendhandler.h  statusmessagehandler.cpp  statusmessagehandler.h  tcpserver.cpp  tcpserver.h
src/plugins/: CMakeLists.txt
src/plugins/dht11/: CMakeLists.txt  dht11.cpp  dht11.h  dht11.json
src/plugins/email/: CMakeLists.txt  email.cpp  email.h  email.json
src/plugins/espeak/: CMakeLists.txt  espeak.cpp  espeak.h  espeak.json
src/plugins/explorenfc/: CMakeLists.txt  explorenfc.cpp  explorenfc.h  explorenfc.json  explorenfc.py
src/plugins/fingerprintzfm/: CMakeLists.txt  fingerprintzfm.cpp  fingerprintzfm.h  fingerprintzfm.json
src/plugins/flame/: CMakeLists.txt  flame.cpp  flame.h  flame.json
src/plugins/lightsensor/: CMakeLists.txt  lightsensor.cpp  lightsensor.h  lightsensor.json
src/plugins/pythonplugin/: CMakeLists.txt  pythonbaseplugin.py  pythonplugin.cpp  pythonplugin.h
src/plugins/rfid/: CMakeLists.txt  rfid.cpp  rfid.h  rfid.json
src/plugins/rpianalogsensor/: CMakeLists.txt  rpianalogsensor.cpp  rpianalogsensor.h  rpianalogsensor.json
src/plugins/rpigpio/: CMakeLists.txt  rpigpio.cpp  rpigpio.h  rpigpio.json  rpigpio.py
src/plugins/rpiled/: CMakeLists.txt  rpiled.cpp  rpiled.h  rpiled.json
src/plugins/rpipir/: CMakeLists.txt  rpipir.cpp  rpipir.h  rpipir.json  rpipir.py
src/plugins/video/: CMakeLists.txt  requesthandlerfactory.cpp  requesthandlerfactory.h  roothandler.cpp  roothandler.h  streamhandler.cpp  streamhandler.h  streamserver.cpp  streamserver.h  video.cpp  video.h  video.json
src/plugins/watersensor/: CMakeLists.txt  watersensor.cpp  watersensor.h  watersensor.json
src/plugins/wifi/: CMakeLists.txt  wifi.cpp  wifi.h  wifi.json
