cmake_minimum_required(VERSION 3.0.0)

project(hypharunner)

add_subdirectory( espeak )
add_subdirectory( wifi )
add_subdirectory( video )

IF(WIN32)
elseif(UNIX)
	add_subdirectory( dht11 )
	add_subdirectory( email )
    add_subdirectory( explorenfc )
    add_subdirectory( fingerprintzfm )
    add_subdirectory( flame )
    add_subdirectory( lightsensor )
    add_subdirectory( rfid )
        add_subdirectory( rpianalogsensor )
	add_subdirectory( rpiled )
	add_subdirectory( rpigpio )
	add_subdirectory( rpipir )
	add_subdirectory( watersensor )
else()
ENDIF()
